--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,8 @@ edition = "2021"
 authors = [ "Lut99" ]
 
 [dependencies]
-console = "0.15"
+console    = "0.15"
+filetime   = "0.2.18"
+log        = { version = "0.4.17", optional = true }
+serde      = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
