--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,5 @@
-[package]
-name = "rust-build"
-version = "0.1.0"
-edition = "2021"
-authors = [ "Lut99" ]
-
-[dependencies]
-console    = "0.15"
-filetime   = "0.2.18"
-log        = { version = "0.4.17", optional = true }
-serde      = { version = "1.0.147", features = ["derive"] }
-serde_json = "1.0.87"
+[workspace]
+members = [
+    "rust-build",
+    "rust-build-std",
+]
