Starting Cargo.toml parsing + added hello-world example
The example is simultaneously used for development :)

--- a/examples/hello-world/hello-world/Cargo.toml
+++ b/examples/hello-world/hello-world/Cargo.toml
@@ -3,3 +3,4 @@ name = "hello-world"
 version = "0.1.0"
 edition = "2021"
 authors = [ "Lut99" ]
+description = "A test app to use for showing the simplest installer example."
